reason_4.0/www/local/luther_2014/stylesheets/scss/modules/_directory.scss
//
// ASSET STYLES
//
// @author Gage Dykema
//

// Foundation imports
@import "settings";
@import "foundation/components/grid";

// Compass imports
@import "compass/css3";

// Font Awesome Imports
@import "font-awesome/variables";
@import "font-awesome/core";

// Luther imports
@import "extends";
@import "mixins";

#directory{
  margin: 0 0 $column-gutter;

  .directoryName,
  .directoryInfo {

    @media
    #{$medium-up} {
      margin-left: rem-calc(200) !important;
    }
  }

  figure {
    width: 25%;
    margin: 0 0 $paragraph-margin-bottom $paragraph-margin-bottom;
    float: right;
    //margin: 0 auto;

    @media
    #{$medium-up} {
      float: left;
      width: rem-calc(150);
      margin: 0 $paragraph-margin-bottom $paragraph-margin-bottom 0;
    }

    img {
      width: 100%;
    }
  }

  .directoryName {
    margin: 0;
    font-size: $h3-font-size;
    font-weight: 400;
  }

  .directoryTitle {
    font-size: $h5-font-size;
    margin-bottom: 0px;
  }

  .directoryInfo {
    h3.directoryTitle:last-of-type{
      margin-bottom: 40px;
    }
    @media
    #{$medium-up}{
      h3.directoryTitle:last-of-type{
        margin-bottom: 0px;
      }
    }
  }

  .directoryContact {
    margin-top: $column-gutter/1.75;
    margin-left: $column-gutter/2;

    li span.attribute{
      position: static;
      width: 95%;
      @media
      #{$medium-up} {
        width: 20%;
      }
      display: inline-block;
      vertical-align: top;

      strong{
        position: static;
      }
    }

    span.attrValue{
      display: inline-block;
      width: 95%;
      @media
      #{$medium-up} {
        width: 76%;
      }
      margin-left: 2px;
    }

    span.multipleAttrValues{
      display: inline-block;
      margin: 0 3px;
      width: 100%;
    }

    li {
      margin-left: rem-calc(40);
      vertical-align: top;

      strong {
        @extend .screenreader;
      }

      &:before {
        @extend .fa;
        width: rem-calc(32);
        margin-left: - rem-calc(36);
        text-align: center;
        vertical-align: top;
        position: relative;
        top: 5px;
      }

    }

    .directoryOffice {
      &:before {
        content: $fa-var-map-marker;
      }
    }

    .directoryPhone {
      &:before {
        content: $fa-var-phone;
      }
    }

    .directoryEmail {
      &:before {
        content: $fa-var-at;
      }
    }

    .directoryStudentResidence {
      &:before {
        content: $fa-var-building;
      }
    }

    .directorySPO {
      &:before {
        content: $fa-var-envelope;
      }
    }

    .directoryUsername {
      &:before {
        content: $fa-var-user;
      }
    }

    .directoryAffiliations {
      &:before {
        content: $fa-var-users;
      }
    }

    .directoryHomeAddress {
      &:before {
        content: $fa-var-home;
        margin-right: 5px;
      }
    }

    .directoryMobile {
      &:before {
        content: $fa-var-mobile;
      }
    }

    .directoryBirthday {
      &:before {
        content: $fa-var-birthday-cake;
      }
    }

    .directoryLastUpdate {
      &:before {
        content: $fa-var-history;
      }
    }

    .directoryDepartment {
      &:before {
        content: $fa-var-university;
      }
    }

    .directoryAdvisor {
      &:before {
        content: $fa-var-graduation-cap;
      }
    }

    // .directoryAdvisor {
    //  &:before {
    //    content: $fa-var-comments;
    //  }
    // }

    .directoryTerms {
      &:before {
        content: $fa-var-book;
      }
    }

  }
}

